force-app/main/default/objects/Program_Application__c/Program_Application__c.object-meta.xml
<CustomObject>
    <label>Program Application</label>
    <nameField>
        <label>Program Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>