force-app/main/default/objects/Program_Application__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A person account who applied for eligibility test</inlineHelpText>
    <label>Program Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Application</relationshipLabel>
    <relationshipName>Programs</relationshipName>
    <type>Lookup</type>
</CustomField>