force-app/main/default/objects/Program_Application__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Broker who is managing the application</inlineHelpText>
    <label>Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Application</relationshipLabel>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>