force-app/main/default/objects/Program_Application__c/fields/Brokerage_Account__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Brokerage firm who is managing the application</inlineHelpText>
    <label>Brokerage Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Application (Brokerage Account)</relationshipLabel>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>