force-app/main/default/objects/Program_Application__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business license of program application</inlineHelpText>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Program Application</relationshipLabel>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>