force-app/main/default/objects/Program_Application__c/fields/Customer_Name_For_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_For_Email_Template__c</fullName>
    <formula>Account__r.FirstName &amp; &quot;  &quot;&amp;  Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name For Email Template</label>
    <type>Text</type>
</CustomField>