force-app/main/default/objects/Program_Application__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Quote + Product Option</description>
    <externalId>true</externalId>
    <inlineHelpText>Quote + Product Option</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>