force-app/main/default/objects/Program_Application__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>