force-app/main/default/objects/Program_Application__c/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Detail</label>
    <referenceTo>ProductCoverage</referenceTo>
    <relationshipLabel>Program Application</relationshipLabel>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>