force-app/main/default/objects/Program_Application__c/fields/Product_Option__c.field-meta.xml
<CustomField>
    <fullName>Product_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Option</label>
    <referenceTo>CoverageType</referenceTo>
    <relationshipLabel>Program Application</relationshipLabel>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>