force-app/main/default/objects/Program_Application__c/fields/Program_Audience__c.field-meta.xml
<CustomField>
    <fullName>Program_Audience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Program Audience of an applicant who submitted the program application</inlineHelpText>
    <label>Program Type</label>
    <referenceTo>Program_Audience__c</referenceTo>
    <relationshipLabel>Program Application</relationshipLabel>
    <relationshipName>Program_Application</relationshipName>
    <type>Lookup</type>
</CustomField>