force-app/main/default/objects/Program_Application__c/fields/Reason_to_Application_Fail__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Application_Fail__c</fullName>
    <inlineHelpText>Applicant to provide additional details to verify his application if it rejected due to wrong answers.</inlineHelpText>
    <label>Reason to Application Fail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>