force-app/main/default/objects/Program_Application__c/recordTypes/Application_with_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>Application_with_Endorsement</fullName>
    <active>true</active>
    <label>Application With Endorsement</label>
</RecordType>