force-app/main/default/objects/Program_Application__c/recordTypes/Application_With_Licenses.recordType-meta.xml
<RecordType>
    <fullName>Application_With_Licenses</fullName>
    <active>true</active>
    <label>Application With Licenses</label>
</RecordType>