force-app/main/default/objects/Program_Application__c/recordTypes/Application_with_Product_Options.recordType-meta.xml
<RecordType>
    <fullName>Application_with_Product_Options</fullName>
    <active>true</active>
    <label>Application with Product Options</label>
</RecordType>