force-app/main/default/objects/Program_Application__c/recordTypes/Application_With_Program_Type.recordType-meta.xml
<RecordType>
    <fullName>Application_With_Program_Type</fullName>
    <active>true</active>
    <label>Application With Program Type</label>
</RecordType>