force-app/main/default/objects/Program_Application__c/recordTypes/Application_With_Quote.recordType-meta.xml
<RecordType>
    <fullName>Application_With_Quote</fullName>
    <active>true</active>
    <label>Application With Quote</label>
</RecordType>